# TP_Protos

./: .gitignore  CMakeLists.txt  Makefile  log.txt  stress_test
src/: Makefile  args.c  main.c  smtp.c  smtp.h  smtpd  socks5nio.c
src/lib/: args.c  buffer.c  data.c  hello.c  netutils.c  parser.c  parser_utils.c  request.c  selector.c  smtpnio.c  stats.c  stm.c
src/lib/headers/: args.h  data.h  netutils.h  request.h  smtpnio.h  stats.h
src/manager/client/: client_manager.c  client_manager.h
src/manager/server/: manager.c  manager.h
src/test/: buffer_test.c  hello_test.c  netutils_test.c  parser_test.c  parser_utils_test.c  request_test.c  selector_test.c  stm_test.c  stress_test.c
